# gpui-carbon

./: .gitignore  Cargo.toml  LICENSE  README.md  results.xlsx
.cargo/: config.toml
.github/workflows/: ci.yml  windows.yml
assets/excel/: 人材机数据库.xlsx  指标汇总.xlsx  道路工程碳排放测算.xlsx
crates/story/: Cargo.toml
crates/story/examples/: Untitled-2.sqlite3-query  excel_table.rs
crates/story/src/: debug.rs  lib.rs  main.rs  title_bar.rs
crates/ui/: Cargo.toml
crates/ui/src/dock/: mod.rs
data/: excel_data.db
