[package]
edition = "2021"
name = "story"
publish = false
version = "0.1.0"

[features]
default = []

[dependencies]
anyhow.workspace = true
charts-rs = "0.3"
chrono = "0.4"
fake = { version = "2.10.0", features = ["dummy"] }
gpui.workspace = true
gpui-component = { workspace = true, features = ["webview"] }
log = "0.4"
log4rs = "1.2"
reqwest_client = { git = "https://github.com/huacnlee/zed.git", branch = "webview" }
rand = "0.8"
regex = "1"
rust-embed.workspace = true
serde = "1"
serde_json = "1"
unindent = "0.2.3"
raw-window-handle = { version = "0.6", features = ["std"] }
schemars = "0.8.22"
rusqlite = "0.32.0"
tokio-rusqlite = "0.6.0"
rfd = "0.15.2"
calamine = "0.26.1"
simple_excel_writer = "0.2.0"

[lints]
workspace = true
